# rovylite

./: .project  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.jdt.core/: 1257776711.index  1431503911.index  1768364694.index  2023055848.index  2320546447.index  2571561926.index  3227091382.index  490752340.index  externalLibsTimeStamps  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.m2e.core/: workspacestate.properties
.metadata/.plugins/org.eclipse.m2e.jdt/: rovy_server.container  rovy_web.container
.metadata/.plugins/org.eclipse.team.ui/: syncParticipants.xml
.metadata/.plugins/org.eclipse.wst.common.modulecore/: dependencyCache.index
.metadata/.plugins/org.eclipse.wst.jsdt.core/indexes/: 1100035553.index  1955699874.index  2866089446.index  3324104762.index  3917786530.index  savedIndexNames.txt
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
.metadata/.plugins/org.eclipse.wst.xml.core/: system_catalog.xml
OpenCVToy/: .classpath  .project
OpenCVToy/src/: SimpleSample.java
RovyOCVClientToy/: .classpath  .project  camparam.json
RovyOCVClientToy/src/jnitoy/: JniToy.java
rovy_api/: .project  pom.xml  redeploy.sh
rovy_api/src/de/gnox/rovy/api/: RovyCom.java  RovyCommand.java  (+2 more)
rovy_opencvwrapper/: .classpath  .gitignore  .project  pom.xml
rovy_opencvwrapper/librovyocv/: CMakeLists.txt  de_gnox_rovy_ocv_MarkerDetector.h  de_gnox_rovy_ocv_RovyOpenCVWrapper.h  example.cxx  rovyocv.cpp  rovyocv.cxx
rovy_opencvwrapper/librovyocv/cams/: osvr_camparam.json
rovy_server/: .classpath  .gitignore  .project  pom.xml  redeploy.sh
rovy_server/scripts/: start_server.sh
rovy_web/: .gitignore  .project  pom.xml  redeploy.sh
rovy_web/WebContent/: index.html
rovy_web/WebContent/WEB-INF/: web.xml
(+59 files in other folders)
