cmake_minimum_required (VERSION 2.8)
project (librovyocv)
find_package( OpenCV REQUIRED )
add_executable(example example.cxx)
add_executable(exampleorig exampleorig.cxx)
add_executable(calibratecam calibrate_camera.cxx)
add_executable(calibratecam_charuco calibrate_camera_charuco.cpp)
add_executable(create_board create_board.cpp)
add_executable(createmarker create_marker.cxx)
add_library(rovyocv SHARED rovyocv.cxx)
target_link_libraries( example ${OpenCV_LIBS} )
target_link_libraries( exampleorig ${OpenCV_LIBS} )
target_link_libraries( calibratecam ${OpenCV_LIBS} )
target_link_libraries( calibratecam_charuco ${OpenCV_LIBS} )
target_link_libraries( createmarker ${OpenCV_LIBS} )
target_link_libraries( create_board ${OpenCV_LIBS} )
target_link_libraries( rovyocv ${OpenCV_LIBS} )

