cmake_minimum_required (VERSION 2.8)
project (librovyocv)
find_package( OpenCV REQUIRED )
add_executable(calibrate_camera calibrate_camera.cxx)
add_executable(create_board create_board.cpp)
add_executable(create_marker create_marker.cxx)
add_library(rovyocv SHARED rovyocv.cxx)
target_link_libraries( calibrate_camera ${OpenCV_LIBS} )
target_link_libraries( create_board ${OpenCV_LIBS} )
target_link_libraries( create_marker ${OpenCV_LIBS} )
target_link_libraries( rovyocv ${OpenCV_LIBS} )

