cmake_minimum_required (VERSION 2.8)
project (librovyocv)
find_package( OpenCV REQUIRED )
add_executable(calibrate_camera calibrate_camera.cpp)
add_executable(create_board create_board.cpp)
add_executable(create_marker create_marker.cpp)
add_executable(detect_markers detect_markers.cpp)
add_library(rovyocv SHARED rovyocv.cpp)
target_link_libraries( calibrate_camera ${OpenCV_LIBS} )
target_link_libraries( create_board ${OpenCV_LIBS} )
target_link_libraries( create_marker ${OpenCV_LIBS} )
target_link_libraries( detect_markers ${OpenCV_LIBS} )
target_link_libraries( rovyocv ${OpenCV_LIBS} )

